-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.11.0, Qt Creator 4.12.2
-
-
2d1805a378d481f8238d6b7ba316495901f298f8 (qt-creator/qt-creator/master)
I am experiencing crashes every day after I upgraded to 4.11. I am running QtCreator on Linux (Ubuntu 18.04).
Distributor ID: Ubuntu
Description: Ubuntu 18.04.3 LTS
Release: 18.04
Codename: bionic
$ uname -a
Linux foobar 5.3.0-26-generic #28~18.04.1-Ubuntu SMP Wed Dec 18 16:40:14 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux
$ sha256sum ~/Qt/Tools/QtCreator/bin/qtcreator
0267da5739929c6189624b77ffbff8dad2595cf167edc071fceda3ecdd74c640
To catch the bug I ran it in gdb.
Here is a log of the crash. Sorry it is not more helpful.
[Thread 0x7fff81ffe700 (LWP 19744) exited]
[New Thread 0x7fff81ffe700 (LWP 19751)]
[New Thread 0x7fff80ffc700 (LWP 19752)]
[New Thread 0x7fff53fff700 (LWP 19755)]
[New Thread 0x7fff537fe700 (LWP 19756)]
[New Thread 0x7fff52ffd700 (LWP 19757)]
[New Thread 0x7fff527fc700 (LWP 19758)]
[New Thread 0x7fff51ffb700 (LWP 19759)]
[New Thread 0x7fff517fa700 (LWP 19760)]
[New Thread 0x7fff50ff9700 (LWP 19761)]
free(): invalid pointer
Thread 226 "Thread (pooled)" received signal SIGABRT, Aborted.
[Switching to Thread 0x7fff51ffb700 (LWP 19759)]
__GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
51 ../sysdeps/unix/sysv/linux/raise.c: No such file or directory.
(gdb)
Here is my QtCreator version
$ ~/Qt/Tools/QtCreator/bin/qtcreator -version Qt Creator 4.11.0 based on Qt 5.14.0 Android 4.11.0 Support for deployment to and execution on Android Devices. AutoTest 4.11.0 Auto Test plugin. AutotoolsProjectManager 4.11.0 Autotools project integration. BareMetal 4.11.0 This plugin adds a target for bare metal development. Bazaar 4.11.0 Bazaar integration. Beautifier 4.11.0 Format source files with the help of beautifiers like AStyle, uncrustify or clang-format. BinEditor 4.11.0 Binary editor component. Bookmarks 4.11.0 Bookmarks in text editors. Boot2Qt 4.11.0 Support for the Boot2Qt Device access using the Qt Debug Bridge. CMakeProjectManager 4.11.0 CMake support. CVS 4.11.0 CVS integration. ClangCodeModel 4.11.0 Clang Code Model plugin. ClangFormat 4.11.0 clang-format indentation plugin. ClangPchManager 4.11.0 Clang precompiled header plugin. ClangRefactoring 4.11.0 Clang Refactoring plugin. ClangTools 4.11.0 ClangTools Plugin. ClassView 4.11.0 Class View component. ClearCase 4.11.0 ClearCase integration. CodePaster 4.11.0 Codepaster plugin for pushing/fetching diff from server. CompilationDatabaseProjectManager 4.11.0 Compilation Database project support. Core 4.11.0 The core plugin for the Qt IDE. CppEditor 4.11.0 C/C++ editor component. CppTools 4.11.0 Tools for analyzing C/C++ code. Cppcheck 4.11.0 Cppcheck static analyzer tool integration. See http://cppcheck.sourceforge.net. CtfVisualizer 4.11.0 Chrome Trace Format Visualizer Plugin. Debugger 4.11.0 Debugger integration. Designer 4.11.0 Qt Designer integration. DiffEditor 4.11.0 Diff editor component. EmacsKeys 4.11.0 The main idea behind this plugin is to provide additional actions a typical emacs user would expect. It doesn't claim to provide full emacs emulation. The following actions are available: - Movement [C-f, C-b, C-n, C-p, M-f, M-b, C-a, C-e, M-<, M->] - Mark-based selection [C-SPC, C-x C-x] - Cut/copy/yank (doesn't provide kill ring feature) [M-w, C-w, C-y] - Kill actions, which interact properly with clipboard [C-k, M-d, C-d] - Scrolling (half of the screen, keeps cursor visible) [C-v, M-v] - Insert new line and indent [C-j] IMPORTANT: Actions are not bound to any key combinations by default. You can find them under 'EmacsKeys' section in keyboard shortcuts settings. Also it's worth mentioning that EmacsKeys plugin forces disabling of menu mnemonics by calling Qt's qt_set_sequence_auto_mnemonic function with false argument. Many of the english menu mnemonics get into the way of typical emacs keys, this includes: Alt+F (File), Alt+B (Build), Alt+W (Window). It's a temporary solution, it remains until there is a better one. FakeVim 4.11.0 VI-style keyboard navigation. GLSLEditor 4.11.0 Editor for GLSL. GenericProjectManager 4.11.0 Generic support. Git 4.11.0 Git integration. HelloWorld 4.11.0 Hello World sample plugin. Help 4.11.0 Help system. ImageViewer 4.11.0 Image Viewer component. Ios 4.11.0 Support for deployment to and execution on iOS Devices. LanguageClient 4.11.0 Language Server Protocol client component. See https://microsoft.github.io/language-server-protocol/overview for an overview on Language Servers. Macros 4.11.0 Macros in text editors. McuSupport 4.11.0 Helper for MCU related projects. Mercurial 4.11.0 Mercurial integration. ModelEditor 4.11.0 Graphical modeling with structured diagrams. Nim 4.11.0 Plugin for supporting the Nim programming language. PerfProfiler 4.11.0 Perf Profiler Plugin. Perforce 4.11.0 Perforce integration. ProjectExplorer 4.11.0 ProjectExplorer framework that can be extended with different kind of project types. Python 4.11.0 Plugin for supporting the Python language. QbsProjectManager 4.11.0 QBS support. QmakeProjectManager 4.11.0 Provides project type for Qt/QMake .pro files and tools. QmlDesigner 4.11.0 Visual Designer for QML files. QmlJSEditor 4.11.0 Editor for QML and JavaScript. QmlJSTools 4.11.0 Tools for analyzing Qml/JS code. QmlPreview 4.11.0 Qml Preview Plugin. QmlProfiler 4.11.0 Qml Profiler Plugin. QmlProjectManager 4.11.0 Qt Quick support Qnx 4.11.0 Adds support for QNX to Qt Creator. QtSupport 4.11.0 Provides support code for build systems. RemoteLinux 4.11.0 Support for deployment to and execution on a remote Linux host. ResourceEditor 4.11.0 Editor for qrc files. ScxmlEditor 4.11.0 Visual Editor for SCXML (State Chart XML) files. SerialTerminal 4.11.0 Serial Port Terminal SilverSearcher 4.11.0 Adds possibility to use SilverSearcher tool as an alternative mechanism of find in files SpellChecker 2.0.5 Spellcheck comments in source files. An Output Pane, Right Click context menu and a Navigation Widget is added to QtCreator to interact with the results from this plugin. StudioWelcome 4.11.0 Qt Design Studio Welcome Page. Subversion 4.11.0 Subversion integration. TaskList 4.11.0 Use .tasks-files to populate the Issues view. TextEditor 4.11.0 Text editor framework and the implementation of the basic text editor. Todo 4.11.0 Adds pane that lists all TODO, FIXME, etc. entries in comments. UpdateInfo 4.11.0 Displays Update-Infos for Qt Installer Framework-based Updaters. Valgrind 4.11.0 Valgrind Plugin. VcsBase 4.11.0 Version Control System Base Plugin. WebAssembly 4.11.0 Helper for WebAssembly projects. Welcome 4.11.0 Secondary Welcome Screen Plugin. WinRt 4.11.0 Helper for Windows Runtime projects. (C) 2019 The Qt Company Ltd
- is duplicated by
-
QTCREATORBUG-23658 QtCreator crash when pri file is modified
-
- Closed
-
-
QTCREATORBUG-24397 Frequent crashes
-
- Closed
-
- relates to
-
QTCREATORBUG-23658 QtCreator crash when pri file is modified
-
- Closed
-