ProParser: Fix crash when starting a QProcess

QProcess modifies the internals of its QProcessEnvironment object in a
manner that is not thread-safe.
We therefore force a detach, so each QProcess instance gets its own
QProcessEnvironment.

Fixes: QTCREATORBUG-23504
Change-Id: I7fc1fda5e7bc11ac4e9a59596a5bdb0ac420a315
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>